<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dumcharades</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_activity1">MainActivity1</string>
    <string name="empty">&quot;&quot;</string>
    <string name="input_label">Player1 Name :</string>
    <string name="sub">Start Game</string>
    <string name="input_label1">Player2 Name :</string>
    <string name="input2">Player3 Name: </string>
    <string name="sub2">ok</string>
    <string name="input3">player4 name: </string>
    <string name="input4">player5 name: </string>
    <string name="title_activity_dumcharades2">Dumcharades2</string>
    <string name="title_activity_dumcharades3">Dumcharades3</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_expandable_list">ExpandableList Demo</string>
    <string name="title_activity_group_main">MainActivity</string>
    <string name="title_activity_dumcharades4">Dumcharades4</string>

</resources>
